hphp/hack/test/sound_dynamic/typing/prop.bad.php.exp
File "prop.bad.php", line 12, characters 15-16:
Class `E` cannot support dynamic because property `x` cannot be assigned to dynamic (Typing[4402])
  File "prop.bad.php", line 12, characters 12-13:
  Property `x` has type `?C`
File "prop.bad.php", line 14, characters 22-23:
Class `E` cannot support dynamic because property `z` does not have an enforceable type (Typing[4402])
  File "prop.bad.php", line 14, characters 12-20:
  Property `z` has type `?vec<int>`
